syntax = "proto3";

package system.v1alpha1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "api/system/v1alpha1/error_reason.proto";
import "api/system/v1alpha1/message.proto";

option go_package = "api/system/v1alpha1;v1alpha1";

service SystemInterface {
      rpc Ping(google.protobuf.Empty) returns (system.v1alpha1.Msg) {
            option (google.api.http) = {
              get: "/api/v1alpha1/system/ping"
            };
      }

      rpc GetSystem(google.protobuf.Empty) returns (system.v1alpha1.System) {
            option (google.api.http) = {
              get: "/api/v1alpha1/system"
            };
      }
}